# saude_drf

./: Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
src/: manage.py
src/api/: constants.py  filtersets.py  urls.py  views.py
src/api/migrations/: 0001_add_health_care_worker.py  0002_add_appointment.py
src/api/models/: __init__.py  appointment.py  base.py  health_care_worker.py
src/api/serializers/: __init__.py  appointment.py  health_care_worker.py
src/api/tests/models/: factories.py  test_appointment.py  test_health_care_worker.py
src/api/tests/serializers/: test_appointment.py  test_health_care_worker.py
src/api/tests/views/: test_appointments_viewset.py  test_health_care_workers_viewset.py
src/saude_drf/: asgi.py  settings.py  urls.py  wsgi.py
