[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saude-drf"
dynamic = ["version"]
authors = [
  { name="Alexandre Harano", email="email@ayharano.dev" },
]
description = "Desafio Lacrei Saúde Back end de Alexandre Harano"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django >=4.2.8,<5",
    "djangorestframework >=3.14.0,<3.15",
    "dj-database-url >=2.1.0,<2.2",
    "psycopg[binary,pool] >=3.1.14,<3.2",
]

[project.urls]
"Homepage" = "https://github.com/ayharano/saude-drf"
"Bug Tracker" = "https://github.com/ayharano/saude-drf/issues"

[tool.setuptools.dynamic]
version = {file = "saude_drf/VERSION"}
