[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saude-drf"
authors = [
  { name="Alexandre Harano", email="email@ayharano.dev" },
]
description = "Desafio Lacrei Saúde Back end de Alexandre Harano"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ayharano/saude-drf"
"Bug Tracker" = "https://github.com/ayharano/saude-drf/issues"
